--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,13 +2,20 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
+
     "rootDir": "./src",
     "outDir": "./dist",
 
     "strict": true,
     "esModuleInterop": true,
+    "moduleResolution": "node",
+
+    "types": ["node"],
+    "resolveJsonModule": true,
 
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
